Tune Cassandra JVM heap and GC settings (WiP)